  * debian/control:
    - Change priority from extra (deprecated) to optional
    - Bump Standards-Version to 4.1.0
  * debian/patches:
    - Added new patch (0004-library-versions.patch) so nmap reports correct
      library versions.
    - Add new patch (0005-autotools.patch) to fix autotools problems and
      allow refreshing all autotools generated files with `autoreconf -fi`.

 -- Lukas Schwaighofer <lukas@schwaighofer.name>  Sun, 27 Aug 2017 16:29:47 +0200

nmap (7.60-1) unstable; urgency=medium

  * New upstream version 7.60
  * Rebase patches
  * Add libssh2 build-dependency to avoid using the embedded copy

 -- Hilko Bengen <bengen@debian.org>  Sat, 12 Aug 2017 00:34:12 +0200

nmap (7.50-1) unstable; urgency=medium

  * New upstream version 7.50.
  * Bump Standards-Version to 4.0.0.
  * Remove unused lintian overrides.

 -- Samuel Henrique <samueloph@gmail.com>  Sat, 17 Jun 2017 21:04:49 -0300

nmap (7.40-1) unstable; urgency=medium

  * New upstream version 7.40.
  * debian/patches:
    - 0001-use-su-to-root.patch: Refresh patch.
    - 0004-zenmap-desktop.patch: Remove patch, applied upstream.
  * debian/watch: Bump to v4.

 -- Samuel Henrique <samueloph@gmail.com>  Thu, 22 Dec 2016 00:52:47 -0200

nmap (7.31-2) unstable; urgency=medium

  [ Gianfranco Costamagna ]
  * Add debian/gbp.conf file

  [ Samuel Henrique ]
  * Bump DH level to 10.
  * Add myself as an uploader.
  * debian/control: Remove dh-autoreconf, now a dependency of DH 10.
  * debian/patches:
    - 0004-zenmap-desktop.patch: New patch to remove Encoding key and add
      Keywords entry for zenmap's desktop files, sent upstream.
  * debian/rules:
    - Avoid useless dependencies with "-Wl,--as-needed".
    - Enable all hardening flags with "hardening=+all".
    - Remove "--parallel" parameter, default on DH 10.
  * wrap-and-sort -a.

  [ Hilko Bengen ]
  * Add manpage links for zenmap links (nmapfe, nmap)

 -- Hilko Bengen <bengen@debian.org>  Wed, 30 Nov 2016 20:41:51 +0100
