@@ -16,7 +16,7 @@ override_dh_auto_install:
 	mv debian/tmp/usr/share/man/pt_PT debian/tmp/usr/share/man/pt
 
 override_dh_autoreconf:
-	dh_autoreconf autoconf
+	dh_autoreconf debian/autoreconf.sh
 
 override_dh_install:
 	dh_install --fail-missing -X/usr/bin/uninstall_ -Xca-bundle.crt -X.pyc
